--- a/index.html
+++ b/index.html
@@ -39,5 +39,27 @@
         </div>
     </header>
 
+    <main class="container">
+        <section class="domains">
+            <h4>Would you like to by a new domain?</h4>
+            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor mauris ac nulla interdum, id molestier.</div>
+            <form class="domain-example">
+                <div class="wrapper">
+                    <span class="www">www.</span>
+                </div>
+                <div class="wrapper">
+                    <span class="want">What do you want?</span>
+                </div>
+                <div class="wrapper">
+                    <select name="domains">
+                        <option value=".com">.com</option>
+                        <option value=".net">.net</option>
+                        <option value=".org">.org</option>
+                    </select>
+                </div>
+            </form>
+        </section>
+    </main>
+
 </body>
 </html>
