fix: domain align

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="domains">
             <h4>Would you like to by a new domain?</h4>
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor mauris ac nulla interdum, id molestier.</div>
-            <form class="domain-example">
+            <form class="grid domain-example">
                 <div class="wrapper">
                     <span class="www">www.</span>
                 </div>
