fix: navigation menu (hover border-bottom) feat: domain section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                     </select>
                 </div>
             </form>
+            <div class="domains-list">
+                <div>.COM</div>
+                <div>1 Year</div>
+                <div>$9.00 USD</div>
+                <div>Transfer Price No</div>
+                <div>.NET</div>
+                <div>1 Year</div>
+                <div>$9.00 USD</div>
+                <div>Transfer Price No</div>
+            </div>
         </section>
     </main>
 
